<?xml version="1.0"?>
<package format="3">
  <name>arm_ur_moveit_config</name>
  <version>0.0.1</version>
  <description>MoveIt config for UR3e with arm_ TF prefix</description>
  <maintainer email="lance.konzen075@gmail.com">lmkonzen</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>ur_moveit_config</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
